# Quadtree-Image-Compression

./: main.py  pyproject.toml
image_compression/: QTree.py  main.py  quadtree.py  run_video.py  the.py
